# Commercium-Contracts

./: .gitignore  .gitmodules  .secret  Goerli_Contracts  Gov Proposal.odp  LICENSE  Makefile  README.md  ToDo.txt  protostar.toml  pyproject.toml  test-deploy-switch.txt
.github/workflows/: main.yml
scripts/: deploy_protocol.py  global_info.py  key_generator.py  selector_encoder.py  utils.py
src/: hub.cairo  incentivized_router_aggregator.cairo  keccak.cairo  router_aggregator.cairo  solver_registry.cairo  trade_executioner.cairo  trade_executor.cairo
src/interfaces/: IEmpiric_oracle.cairo  IFactory.cairo  IHub.cairo  IPool.cairo  IRouter.cairo  IRouter_aggregator.cairo  ISolver.cairo  ISolver_registry.cairo  ISpf_solver.cairo  ITrade_executioner.cairo  ITrade_executor.cairo  IUni_factory.cairo  IUni_pair.cairo  IUni_router.cairo  i_base_solver.cairo  i_empiric_oracle.cairo  i_factory.cairo  i_heuristic_splitterV2.cairo  i_heuristic_splitterV3.cairo  i_hub.cairo  i_pool.cairo  i_router.cairo  i_router_aggregator.cairo  i_router_proxy.cairo  i_single_swap_solver.cairo  i_solver.cairo  i_solver_registry.cairo  i_spf_solver.cairo  i_trade_executor.cairo
src/lib/: array.cairo  arrayV2.cairo  constants.cairo  graph.cairo  hub.cairo  reentrancy.cairo  router_aggregator.cairo  solver_utils.cairo  utils.cairo
src/mocks/: mock_ERC20.cairo  mock_TenK_pair.cairo  mock_TenK_router.cairo  mock_alpha_pair.cairo  (+11 more)
testInterface/: i_mock_jedi_router.cairo
tests/: graddesc_test.cairo  hub_test.cairo  keccak_test.cairo  test_router_aggregator.cairo  test_spf.cairo
(+32 files in other folders)
