[tool.poetry]
name = "Commercium"
version = "0.1.0"
description = "On-Chain DEX Aggregator."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
cairo-lang = "^0.10.2"
starknet-py = "^0.10.1a0"
starknet-devnet = "^0.4.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
marshmallow-dataclass = "^8.5.9"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Using or importing the ABCs:DeprecationWarning",                                # from frozendict
    "ignore:lexer_state will be removed in subsequent releases. Use lexer_thread instead.", # from lark
]
asyncio_mode = "auto"
markers = ["sha3"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
